--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                         <span class="logo__letters">Web</span><span>Studio</span>
                     </a>
                     <ul class="nav__list">
-                        <li class="nav__item"><a class="nav__link" href="/">Студія</a></li>
+                        <li class="nav__item"><a class="nav__link" href="./index.html">Студія</a></li>
                         <li class="nav__item"><a class="nav__link nav__link--current" href="./portfolio.html">Портфоліо</a></li>
                         <li class="nav__item"><a class="nav__link" href="/">Контакти</a></li>
                     </ul>
